--- a/colorGame.html
+++ b/colorGame.html
@@ -23,7 +23,6 @@
 	<div class="collapse navbar-collapse" id="collapsedData">
 		<ul class="nav navbar-nav">
 			<li id="newGame"><a href="#">New Game</a></li>
-			<li><a href="#">Turns: <span id="turn">0</span></a></li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
 			<li class="dropdown">
@@ -50,20 +49,23 @@
 <!--navbar end -->
 
 
-<div class="containerBottom">
+<section class="section-game">
 	<div class="small medium large"></div>
 	<div class="small medium large"></div>
 	<div class="small medium large"></div>
 	<div class="small medium large"></div>
-	<div class="small medium large"></div>
-	<div class="small medium large"></div>
-	<div class="small medium large"></div>
-	<div class="small medium large"></div>
+	<div id='smallTurnLayout'><span id='smallTurnSingle'></span></div>
 	<div class="small medium large"></div>
 	<div class="small medium large"></div>
 	<div class="small medium large"></div>
 	<div class="small medium large"></div>
 
+
+	<div class="medium large"></div>
+	<div class="medium large"></div>
+	<div class="medium large"></div>
+	<div class="medium large"></div>
+	<div id='mediumTurnLayout'><span id='mediumTurnSingle'></span></div>
 	<div class="medium large"></div>
 	<div class="medium large"></div>
 	<div class="medium large"></div>
@@ -77,6 +79,7 @@
 	<div class="medium large"></div>
 	<div class="medium large"></div>
 
+	<div id='largeTurnLayout'><span id='largeTurnSingle'></span></div>
 	<div class="large"></div>
 	<div class="large"></div>
 	<div class="large"></div>
@@ -89,7 +92,19 @@
 	<div class="large"></div>
 	<div class="large"></div>
 	<div class="large"></div>
-</div>
+	<div class="large"></div>
+	<div class="large"></div>
+	<div class="large"></div>
+	<div class="large"></div>
+	<div class="large"></div>
+	<div class="large"></div>
+	<div class="large"></div>
+	<div class="large"></div>
+	<div class="large"></div>
+	<div class="large"></div>
+	<div class="large"></div>
+	<div class="large"></div>
+</section>
 
 <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
